[gd_scene load_steps=5 format=3 uid="uid://bdogowsxwyoer"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_7itj1"]
[ext_resource type="PackedScene" uid="uid://cc64tdil3cu0r" path="res://scenes/player.tscn" id="1_ubv40"]
[ext_resource type="PackedScene" uid="uid://b564e48u6tjwv" path="res://scenes/enemy.tscn" id="2_ac7nh"]

[sub_resource type="Curve2D" id="Curve2D_ok8s1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1, 1, 0, 0, 0, 0, 478, -1, 0, 0, 0, 0, 480, 721, 0, 0, 0, 0, -1, 723, 0, 0, 0, 0, -1, 1)
}
point_count = 5

[node name="main" type="Node"]
script = ExtResource("1_7itj1")
enemy_scene = ExtResource("2_ac7nh")

[node name="player" parent="." instance=ExtResource("1_ubv40")]

[node name="mob_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="score_timer" type="Timer" parent="."]

[node name="start_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="start_position" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="enemy_path" type="Path2D" parent="."]
curve = SubResource("Curve2D_ok8s1")

[node name="enemy_spawn_location" type="PathFollow2D" parent="enemy_path"]
position = Vector2(-1, 1)
rotation = -0.00417534

[connection signal="hit" from="player" to="." method="game_over"]
[connection signal="timeout" from="mob_timer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="score_timer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="start_timer" to="." method="_on_start_timer_timeout"]
